# flint-2

./: .gitignore  .travis.yml  Cargo.toml  README.md  flint_config.json  run_move_tests.py  shapes.quartz  test.quartz
docs/: guide.md  state_of_flint-2.md
output/: Shapes.mvir  Shapes.sol
src/: AstProcessor.rs  ast_processor.rs  context.rs  environment.rs  ewasm_tests.rs  main.rs  visitor.rs
src/AST/: calls.rs  declarations.rs  expressions.rs  literals.rs  mod.rs  operators.rs  statements.rs  types.rs
src/MoveCodeGen/: mod.rs
src/Parser/: calls.rs  declarations.rs  expressions.rs  identifiers.rs  literals.rs  mod.rs  modifiers.rs  operators.rs  parameters.rs  statements.rs  types.rs  utils.rs
src/SemanticAnalysis/: mod.rs
src/SolidityCodeGen/: mod.rs
src/TypeAssigner/: mod.rs
src/TypeChecker/: mod.rs
src/ast/: calls.rs  declarations.rs  expressions.rs  literals.rs  mod.rs  operators.rs  statements.rs  types.rs
src/environment/: conflicts.rs  declarations.rs  expr_type_check.rs  functions.rs  mod.rs  properties.rs
src/ewasm/: abi.rs  assignment.rs  call.rs  codegen.rs  contract.rs  declaration.rs  expressions.rs  function.rs  function_context.rs  identifier.rs  literal.rs  mod.rs  statements.rs  struct_access.rs  structs.rs  temporary_llvm_tests.rs  types.rs  utils.rs
src/io/: mod.rs  (+2 more)
test_files/: map.flint
tests/: callerprotections-counter.flint  counter.flint  counter.mvir  counter_with_type_states.flint  external_ether.flint  map.flint  moneyPot.flint  rectangle.flint  shapes.flint  shapes.mvir  traffic_lights.flint  traffic_lights.mvir
(+192 files in other folders)
