[package]
name = "flint"
version = "0.0.1"
authors = ["kac216 <kac216@ic.ac.uk>", "jml19 <jml19@ic.ac.uk>", "gs919 <gs919@ic.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0"
nom_locate = "2.0.0"
sha3 = "0.8.2"
hex = "0.4.2"
itertools = "0.9.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
json = "0.12.4"
regex = "1"
wabt = "0.10.0"
ewasm_api = "0.11.0"
libchisel = "0.6.0"
parity-wasm = "0.41.0"
pwasm-utils = "0.14.0"
num-bigint = "0.3.0"